# tauri-clipboard-manager

./: .eslintrc.json  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts.timestamp-1730867396757-e8d849ae413b2.mjs
.changelog/: 0.1.1.mdx  0.1.2.mdx  1.0.0.mdx  1.0.1.mdx  1.0.2.mdx  1.0.3.mdx  1.1.0.mdx  1.2.0.mdx  1.2.1.mdx  1.3.0.mdx  1.4.0.mdx  1.5.0.mdx  1.6.0.mdx  1.6.1.mdx  1.6.2.mdx
.changeset/: config.json  cuddly-pumpkins-pretend.md  disable-focus-outline.md  eleven-crabs-crash.md  fast-lies-speak.md  five-taxis-itch.md  good-singers-invent.md  honest-news-thank.md  hot-falcons-jump.md  little-onions-vanish.md  major-release.md  mighty-ducks-build.md  neat-melons-dress.md  new-bees-punch.md  official-1.0.0.md  pretty-timers-camp.md  quick-dingos-own.md  quiet-mangos-collect.md  quiet-tips-run.md  stupid-mice-shake.md  twelve-flowers-fail.md  windows-only.md  windows-release.md  yellow-cycles-obey.md
.github/workflows/: ci.yml  release.yml  version-pr.yml
scripts/: sync-version.js
src/: App.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: clipboard.rs  db.rs  image.rs  mod.rs  position.rs  window.rs
src-tauri/src/db/: migration.rs  mod.rs
src/components/: ClipboardPreview.tsx  clipboard-details.tsx  clipboard-item.tsx  clipboard-list.tsx  clipboard-preview.tsx  clipbpard-list.tsx  context-menu.tsx  empty-state.tsx  search-input.tsx  skeleton-item.tsx
src/icons/: clipboard.tsx  code.tsx  copy.tsx  document.tsx  file.tsx  image.tsx  index.ts
src/types/: clipboard.ts
src/utils/: db.ts  highlight.tsx  time.ts
