[package]
name = "Clippr"
version = "1.6.3"
description = "Advanced clipboard manager built with Tauri"
authors = [ "Shintaro Jokagi" ]
edition = "2021"

[lib]
name = "tauri_clipboard_manager_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies.tauri-build]
version = "2"
features = [ ]

[dependencies]
tauri-plugin-shell = "2"
serde_json = "1"
tauri-plugin-clipboard = "2.1.11"
rusqlite = "0.32.1"
base64 = "0.22.1"
image = "0.25.5"
win_ocr = "0.1.3"
tokio = "1.41.0"
chrono = "0.4.38"
dirs = "5.0"
tauri-plugin-fs = "2"
window-vibrancy = "0.5.2"
active-win-pos-rs = "0.8.3"

  [dependencies.tauri]
  version = "2"
  features = [ "macos-private-api", "tray-icon" ]

  [dependencies.serde]
  version = "1"
  features = [ "derive" ]

  [dependencies.tauri-plugin-sql]
  version = "2"
  features = [ "sqlite" ]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-single-instance = "2"
